--- a/src/App.css
+++ b/src/App.css
@@ -234,14 +234,14 @@ body{
 }
 
 .Quest {
-  width: 20rem;
+  /* width: 20rem; */
   display: inline-block;
-  position: relative;
-  left: -2.5rem;
-  top: 3rem;
+  position: static;
+  /* left: -2.5rem; */
+  top: 5rem;
   /* left: -30px;
   top: 40px; */
-  z-index: 2;
+  /* z-index: 2; */
   width:flex;
   padding: 0.5rem 1rem;
   line-height: 28px;
@@ -249,7 +249,7 @@ body{
   background-color: var(--white000);
   border: solid 2px var(--gray100);
   /* font-family: 'DungGeunMo'; */
-  text-align: left;
+  /* text-align: left; */
   box-sizing: border-box;
 }
 
@@ -379,7 +379,6 @@ body{
     font-size: 0.75rem;
   }
   .Quest {
-    /* left: ; */
     width: auto;
   }
   .TypeImage {
